--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+Options -MultiViews
 RewriteEngine on
 RewriteRule ^entity/(.+)/(\d+)\+(\d+)\+(\d+)\+(\d+)$ fragment.php?id=$1&x1=$2&y1=$3&x2=$4&y2=$5
 RewriteRule ^entity/(.+)$ source.php?id=$1
