FEATURE: Hypertopic v2 corpus emulation (read-only). Note: Single corpus.

--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,4 @@ RewriteRule ^picture/(.+)$ picture.php?id=$1
 RewriteRule ^picture/$ pictures.php
 RewriteRule ^resource/.+picture/(.+)$ resource.php?id=$1
 
+RewriteRule ^corpus/.+$ corpus.php
