FEATURE: Hypertopic v2 API for items (includes name, resource and thumbnail).

--- a/.htaccess
+++ b/.htaccess
@@ -9,4 +9,5 @@ RewriteRule ^picture/(.+)$ picture.php?id=$1
 RewriteRule ^picture/$ pictures.php
 RewriteRule ^resource/.+picture/(.+)$ resource.php?id=$1
 
-RewriteRule ^corpus/.+$ corpus.php
+RewriteRule ^corpus/00$ corpus.php
+RewriteRule ^item/00/(.+)$ item.php?id=$1
