--- a/.htaccess
+++ b/.htaccess
@@ -12,3 +12,4 @@ RewriteRule ^resource/.+picture/(.+)$ resource.php?id=$1
 RewriteRule ^corpus/00$ corpus.php
 RewriteRule ^item/00/(.+)$ item.php?id=$1
 RewriteRule ^item/\?resource=.+picture/(.+)$ resourceV2.php?id=$1
+RewriteRule ^user/(.+)$ user.php?id=$1
