--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 Options -MultiViews
+Options +FollowSymLinks
 RewriteEngine on
+RewriteBase /~benel/steatite/
 RewriteRule ^thumbnail/(.+)/(\d+)\+(\d+)\+(\d+)\+(\d+)$ thumbnail.php?id=$1&x1=$2&y1=$3&x2=$4&y2=$5
 RewriteRule ^thumbnail/(.+)$ thumbnail.php?id=$1
 RewriteRule ^picture/(.+)$ picture.php?id=$1
