FEATURE: Hypertopic v2 corpus view (with real corpora).

--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,7 @@ RewriteRule ^picture/$ pictures.php
 RewriteRule ^entity/(.+)$ hypertopicV1/source.php?id=$1
 RewriteRule ^entity/$ hypertopicV1/sources.php
 
-RewriteRule ^corpus/00$ hypertopicV2/corpus.php
-RewriteRule ^item/00/(.+)$ hypertopicV2/item.php?id=$1
+RewriteRule ^corpus/(.+)$ hypertopicV2/corpus.php?corpus=$1
+RewriteRule ^item/(.+)/(.+)$ hypertopicV2/item.php?corpus=$1&item=$2
 RewriteRule ^item/\?resource=.+picture/(.+)$ hypertopicV2/resource.php?id=$1
 RewriteRule ^user/(.+)$ hypertopicV2/user.php?id=$1
