--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 Options -MultiViews
 Options +FollowSymLinks
 RewriteEngine on
-RewriteBase /~benel/steatite/
+RewriteBase /Steatite
 
 RewriteRule ^thumbnail/(.+)/(\d+)\+(\d+)\+(\d+)\+(\d+)$ controller/thumbnail.php?id=$1&x1=$2&y1=$3&x2=$4&y2=$5
 RewriteRule ^thumbnail/(.+)$ controller/thumbnail.php?id=$1
