FEATURE: Updated the code for the HandleFileAddedInS3 function
We now get the metadata of the image, especially the "DateTimeOriginal" via the "exif" module.

.gitignore was also updated to avoid the presence of the vscode file.

Co-authored : @callistas

--- a/src/HandleFileAddedInS3/package.json
+++ b/src/HandleFileAddedInS3/package.json
@@ -1,14 +1,1 @@
-{ 
-  "name": "handlefileaddedins3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "sharp": "^0.30.5"
-  }
-}
+{"name":"handlefileaddedins3","version":"1.0.0","description":"","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"author":"","license":"ISC","dependencies":{"exif":"^0.6.0","sharp":"^0.30.5"}}
